# Intership

./: .gitattributes  .gitignore  .gitmodules  README.md  analyze_chunks_latin1.py  analyze_chunks_tokenizer.py  block_dataset.py  byt5.py  convert_to_hdf5.py  create_dataset.py  dump_train_dataset.py  end2end_np.py  end_to_end_fragm.py  end_to_end_torch.py  gpu_selector.py  nohup.out  pyproject.toml  sanity_check_byt5.py  split_and_train_byt5.py  train_byt5.py  train_hist.py  train_model.py
artifacts/: metadata.json  train_dump.jsonl  y_test.npy  y_train.npy
byt5_models/byt5_small/: config.json  model.safetensors  pretrained_models_byt5_small_checkpoint  pretrained_models_byt5_small_model-info.txt  pretrained_models_byt5_small_model.ckpt-1000000.index  pretrained_models_byt5_small_operative_config.gin  pretrained_models_byt5_small_pretrain_operative_config.gin
dataset/: dataset_info.pkl
new/: pytorch_dataset.py
nohup/: checkpoint
nohup/11_25/: mp3_plain
nohup/20_11/: early_stopping  multi-pooling  split
preprocessing/: fragmentation.py  np_fragmentation.py  torch_fragmentation.py
runs/byt5_base_smoketest/: report.json
runs/byt5_small_headonly/: report.json
runs/byt5_small_smoketest/: report.json
script/utils/: download_raw_data.py  format_datasets.py
script/utils/.cache/gdown/: cookies.txt
utils/script/utils/: estimator.py  fast_eval.py  memory_watcher.py  preprocessing_utils.py
